# wevosi

./: .gitignore  .replit  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-account-Did--1730737580738.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-all-properties-1730737163301.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-login-Did-yo-1730688658272.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-login-Did-yo-1730688677795.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-notifications--1730724485381.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-properties-D-1730737003095.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-reset-request--1730757928853.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-settings-Did-1730737847401.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedTable-relation-notifi-1730738141598.txt  README.md  app.py  database.py  email_utils.py  models.py  pyproject.toml  replit.nix  requirements.txt  set_admin.py
templates/: account.html  all_properties.html  base.html  dashboard.html  index.html  login.html  notifications.html  properties.html  public_profile.html  resend_verification.html  reset_password.html  reset_request.html  settings.html  signup.html  (+1 more)
(+7 files in other folders)
